# magic_focus

./: .gitignore  pyproject.toml
magic_focus/: main.py
