[tool.poetry]
name = "magic_focus"
version = "0.1.0"
description = "Script to handle focusing between tiled and floating windows in i3."
authors = ["Jaren Glenn <jarenglenn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
i3ipc = "^2.2.1"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.9"
mypy = "^0.960"

[tool.poetry.scripts]
"magic_focus" = "magic_focus.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
